[package]
name = "docker-reroll"
version = "1.0.2"
edition = "2021"
description = "Zero-downtime deployment of Docker containers"
homepage = "https://github.com/veyh/docker-reroll"
repository = "https://github.com/veyh/docker-reroll"
license = "MIT"
exclude = [
    ".changes/*",
    ".changeie.yaml",
    "scripts/*",
    "Makefile",
]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.13.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
subprocess = "0.2.9"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
